# InTooDeep_project

./: .gitignore  CNN.py  CNN_1img_baseangle.py  CNN_ResNet.ipynb  CNN_jupyter.ipynb  Image_test.py  README.md  data_augmentation.py  networks.py  pyproject.toml  test.ipynb  test_bjh.py  windturbine.py  windturbine_CUDA.py  windturbine_cp.py  windturbine_tester.py
data/: rotations.csv  rotations_w_images.csv  rotations_w_images_60.csv  rotations_w_images_long.csv  rotations_w_images_long_30_deg.csv  rotations_w_images_long_45_deg.csv  rotations_w_images_long_60_deg.csv
final_notebook/: ResNet34_30deg.ipynb  ResNet34_30deg_normal_noise.ipynb  ResNet34_45deg.ipynb  ResNet34_45deg_normal_noise.ipynb  final.ipynb  final_30deg_normal_noise_scale_1.ipynb  final_45deg_normal_noise_scale_1.ipynb  final_60deg_all_noise.ipynb  final_60deg_normal_noise.ipynb  final_60deg_normal_noise_scale_1.ipynb  final_base.ipynb  final_noise.ipynb  final_noise_60deg.ipynb  final_noise_60deg_all_noise-Copy1.ipynb  final_noise_60deg_all_noise.ipynb  final_noise_60deg_uniform_noise.ipynb  final_noise_base.ipynb  final_normal_noise.ipynb  final_normal_noise_base.ipynb  final_normal_noise_base_scale_1.ipynb  final_normal_noise_scale_1.ipynb  final_normal_noise_scale_10.ipynb  final_uniform_noise.ipynb  final_uniform_noise_base.ipynb  networks_final.py  plotter.ipynb  windturbine_final.py
model_training/: CNN_Reg.py  CNN_Regressor_4_conv.py  CNN_test_2_output.py  ResNet101_Pretrained.py  ResNet34.py  ResNet34_full_monty.py  ResNet50.py  ResNet50_full_monty.py  ResNet50_full_monty_1_image.py  (+1 more)
(+7 files in other folders)
